[package]
name = "Replicant"
version = "0.1.0"
authors = ["James Sully <sullyj3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2"
simple-logging = "2.0"
log = "0.4"

[lib]
name = "replicant"
crate-type = ["cdylib"]
